# Operarioai

./: .dockerignore  .env.oss.example  .gitignore  AGENTS.md  AGENT_PEER_DM_PLAN.md  CLAUDE.md  DEVELOPMENT.md  LICENSE  NOTICE  README.md  agent_namer.py  celery_task_counter.py  compose.yaml  docker-compose.dev.yaml  manage.py  observability.py  pyproject.toml  run-with-secrets.sh  turnstile_signup.py
.factory/: settings.json
.github/workflows/: ci.yml  droid-implement.yml  droid.yml  preview-cleanup-dispatch.yml  release.yml
agents/: pretrained_worker_definitions.py  services.py
api/: admin.py  admin_forms.py  apps.py  auth.py  custom_tool_bridge.py  domain_validation.py  encryption.py  exceptions.py  idle_notifications.py  models.py  openrouter.py  periodic_tasks.py  permissions.py  pipedream_app_utils.py  proxy_selection.py  public_profiles.py  sandbox_utils.py  secret_key_generator.py  serializers.py  system_setting_signals.py  task_credit_signals.py  urls.py  views.py  webhooks.py
api/agent/: __init__.py  avatar.py  collaborator_signals.py  events.py  peer_comm.py  peer_link_signals.py  short_description.py  tags.py
api/evals/: COMPARISON_DESIGN.md  base.py  execution.py  fingerprint.py  gc.py  loader.py  metrics.py  realtime.py  registry.py  runner.py  sim_config.py  sim_views.py  suites.py  tasks.py  urls.py
api/integrations/: pipedream_connect.py  pipedream_connect_gc.py
api/llm/: __init__.py  utils.py
api/maintenance/: __init__.py  prompt_archives.py
api/management/: __init__.py
api/migrations/: 0001_initial.py  0002_agent.py  0003_agenttask_agenttaskstep.py  0004_agenttask_error_message.py  0005_alter_agent_unique_together_and_more.py  0006_rename_agent_browseruseagent_and_more.py  0007_backfill_userquota.py  0008_alter_browseruseagenttask_status.py  0009_alter_browseruseagenttask_input_data.py  0010_alter_browseruseagenttask_status.py  0011_browseruseagenttask_deleted_at_and_more.py  0012_alter_browseruseagenttask_input_data.py  0013_add_raw_key_field.py  0014_add_output_schema_field.py  0015_alter_browseruseagenttaskstep_result_value.py  0016_rename_input_data_to_prompt.py  0017_alter_browseruseagenttask_agent.py  0018_add_secrets_support.py  0019_add_paid_plan_intent.py  0020_cleanup_django_celery_beat_tables.py  0021_add_decodo_models.py  0021_task_credit_system.py  0022_backfill_taskcredit.py  0023_merge_20250615_1737.py  0024_remove_taskcredit_unique_task_credit_invoice.py  0025_merge_20250616_2019.py  0026_remove_userquota_task_quota_and_more.py  0027_proxyserver.py  0027_userbilling.py  0028_proxyserver_decodo_ip.py  0028_userbilling_backfill.py  0029_alter_userbilling_max_extra_tasks.py  0029_decodoip_port_decodoip_api_decodoi_port_4bb967_idx_and_more.py  0030_auto_20250618_2101.py  0030_taskcredit_additional_task.py  0031_auto_20250618_2101.py  0032_browseruseagent_preferred_proxy.py  0033_browseruseagent_api_browser_preferr_4ec822_idx_and_more.py  0034_proxy_health_check_spec.py  0035_add_default_health_check_spec.py  (+363 more)
api/services/: agent_email_aliases.py  (+40 more)
billing/: ADDONS_DESIGN.md  addons.py  lifecycle_classifier.py  lifecycle_handlers.py  lifecycle_signals.py  plan_resolver.py  services.py
config/: account_adapter.py  account_views.py  allauth_adapter.py  apps.py  asgi.py  bootsteps.py  celery.py  context_processors.py  minimal_test_settings.py  plans.py  redis_client.py  settings.py  socialaccount_adapter.py  stripe_config.py  test_settings.py  urls.py  vite.py
console/: agent_addons.py  agent_context.py  agent_creation.py  agent_quick_settings.py  agent_reassignment.py  api_views.py  apps.py  billing_update_service.py  context_helpers.py  context_overrides.py  context_views.py  daily_credit.py  extra_tasks_settings.py  forms.py  home_metrics.py  insight_views.py  llm_serializers.py  mixins.py  org_billing_helpers.py  phone_utils.py  role_constants.py  system_status.py  tasks.py  usage_views.py  views.py
constants/: feature_flags.py  grant_types.py  phone_countries.py  plans.py  regex.py  security.py  stripe.py
docker/: Dockerfile  compose.disable-app.yaml  compose.disable-beat.yaml  compose.disable-web.yaml  compose.disable-worker.yaml  compose.enable-obs.yaml  otel-collector-config.yaml
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
marketing_events/: README.md  api.py  constants.py  context.py  custom_events.py  schema.py  tasks.py  telemetry.py  value_utils.py
middleware/: app_shell.py  console_timezone.py  fbp_middleware.py  user_id_baggage.py  utm_capture.py
misc/: check_redis_connection.py  example_api_client.py  test_secrets_example.py
pages/: account_info_cache.py  admin.py  apps.py  context_processors.py  examples_data.py  forms.py  homepage_cache.py  library_views.py  mini_mode.py  mixins.py  models.py  signals.py  tasks.py  urls.py  utils_markdown.py  views.py
proprietary/: __init__.py  apps.py  defaults.py  forms.py  urls.py  utils_blog.py  views.py
scripts/: check_test_tags.py  gc_eval_suites.py  generate-ts-client.sh  test_owner_execution_pause.sh  vite_release_manifest.py
setup/: __init__.py  apps.py  forms.py  middleware.py  urls.py  views.py
static/: manifest.json
tasks/: services.py
templates/: base.html  page.html  system_settings.html
templatetags/: analytics_tags.py  form_extras.py  social_extras.py  vite_tags.py
tests/: apps.py  test_token_usage_tracking.py  test_websockets.py
util/: __init__.py  analytics.py  ephemeral_xvfb.py  fish_collateral.py  integrations.py  onboarding.py  payments_helper.py  phone.py  sms.py  subscription_helper.py  text_sanitizer.py  tool_costs.py  trial_eligibility.py  trial_enforcement.py  urls.py  user_behavior.py  waffle_flags.py
(+908 files in other folders)
